--- a/css/base.css
+++ b/css/base.css
@@ -98,6 +98,10 @@ img {
 	background:url(/images/about/back.jpg);
 }
 
+#video-img {
+	background:url(/images/video/back.jpg);
+}
+
 #home-img-shown {
 	position:relative;
 	z-index:2;
@@ -130,8 +134,5 @@ img {
 	margin:70px 30px 0px 0px;
 }
 	
-
-
-
 	
 	
