--- a/css/video.css
+++ b/css/video.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* video css */
 
-.flowplayer {
+#jwplayer {
 	float:left;
 	clear:both;
 	margin-top:-700px;
@@ -15,5 +15,6 @@
 	height:50px;
 	margin:120px 0px 0px 100px;
 	background:#fff;
+	cursor:pointer;
 }
 
