--- a/css/base.css
+++ b/css/base.css
@@ -13,14 +13,16 @@ img {
 }
 
 .text {
-	font-family:Times New Roman, Times, serif;
-	font-size:14px;
+	font-family:"Garamond", Times New Roman, Times, serif;
+	/*font-size:14px;*/
 	color:#000;
 }
 
 /* main body */
 #body {
-	width:1100px;
+	width:90%;
+	min-width:990px;
+	max-width:1236px;
 	height:100%;
 	margin-left:auto;
 	margin-right:auto;
@@ -28,11 +30,12 @@ img {
 }
 
 #body-lower {
-	width:100%;
+	width:97%;
 	height:auto;
 	float:left;
-	clear:both;
 	margin-top:15px;
+	padding-bottom:10px;
+	overflow:hidden;
 }
 
 /* navigation */
@@ -40,7 +43,7 @@ img {
 	width:336px;
 	height:30px;
 	float:left;
-	margin: 70px 0px 0px 0px;
+	margin: 60px 0px 0px 20px;
 	background:#fff;
 
 }
@@ -48,7 +51,8 @@ img {
 .nav,.nav-bold {
 	float:right;
 	width:70px;
-	margin:90px 30px 0px 0px;
+	height:15px;
+	margin:77px 15px 0px 0px;
 	font-size:15px;
 	cursor:pointer;
 	text-align:center;
@@ -64,7 +68,7 @@ img {
 }
 
 #nav-contact {
-	margin-right:0px;
+	margin-right:19px;
 	width:75px;
 }
 
@@ -88,27 +92,25 @@ img {
 /* images */
 
 .img-back {
-	width:1100px;
-	height:700px;
+	width:100%;
+	height:auto;
 	float:left;
 	clear:both;
 }
 
-#about-img {
-	background:url(/images/about/back.jpg);
-}
-
-#video-img {
-	background:url(/images/video/back.jpg);
-}
 
 #home-img-shown {
 	position:relative;
 	z-index:2;
+	width:100%;
+	height:auto;
+	
 }
 
 #home-img-hidden {
-	margin-top:-700px;
+	margin-top:-63.66%;
+	width:100%;
+	height:auto;
 	
 }
 
@@ -124,15 +126,56 @@ img {
 
 .body-text {
 	float:left;
+	color:#333;
 	padding: 10px 10px 10px 10px;
-	font-size:12px;
 }
 
 #about-us-text {
 	float:right;
-	width:400px;
+	width:500px;
 	margin:70px 30px 0px 0px;
 }
+
+/* arrows */
+
+#last-arrow,#next-arrow {
+	float:left;
+	width:100%;
+	height:100%;
+	cursor:pointer;
+}
+
+.arrow-container {
+	float:left;
+	clear:both;
+	margin-top:15px;
+	overflow:hidden;
+	width:1.5%;
+}		
+
+#next-arrow,#next-arrow-container {
+	clear:none;
+}
+
+/* portfolio */
+#animate-outer-container {
+	width:401%;
+	height:100%;
+	float:left;
+	margin-left:0px;
 	
 	
-	
+}
+
+.animate-inner-container {
+	float:left;
+	width:25%;
+	height:100%;
+
+}
+
+.img-back-portfolio {
+	float:left;
+	width:33.3333%;
+	height:auto;
+}
