--- a/css/video.css
+++ b/css/video.css
@@ -4,16 +4,19 @@
 #jwplayer {
 	float:left;
 	clear:both;
-	margin-top:-700px;
 	position:relative;
 	z-index:-1;
+	display:none;
 }
 
 .video-play-button {
 	float:left;
+	clear:both;
+	position:relative;
+	z-index:1;
 	width:50px;
 	height:50px;
-	margin:120px 0px 0px 100px;
+	margin:-500px 0px 0px 100px;
 	background:#fff;
 	cursor:pointer;
 }
