--- a/css/video.css
+++ b/css/video.css
@@ -14,10 +14,9 @@
 	clear:both;
 	position:relative;
 	z-index:1;
-	width:50px;
-	height:50px;
+	width:7.5%;
+	height:auto;
 	margin:-500px 0px 0px 100px;
-	background:#fff;
 	cursor:pointer;
 }
 
