--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,7 @@ img {
 }
 
 .text {
-	font-family:"Garamond", Times New Roman, Times, serif;
+	font-family:Arial, "Helvetica", sans-serif;
 	/*font-size:14px;*/
 	color:#000;
 }
@@ -40,6 +40,7 @@ img {
 
 p.body-text {
 	margin: 3px;
+	color:#666;
 }
 
 .larger-text {
@@ -50,6 +51,10 @@ p.body-text {
 	line-height:1.5em;
 }
 
+.grey {
+	color:#666;
+}
+
 
 #copyright {
 	float:right;
@@ -57,6 +62,7 @@ p.body-text {
 	margin-right:1.6%;
 	font-size:10px;
 	letter-spacing: 1px;
+	color:#999;
 }
 
 #hover-text {
@@ -75,7 +81,8 @@ p.body-text {
 }
 
 .hover-text-small {
-	font-size:10px;
+	margin-top:-22px;
+	font-size:14px;
 }
 
 .whiteout {
@@ -111,16 +118,17 @@ p.body-text {
 	width:350px;
 	height:30px;
 	float:left;
-	margin: 64px 0px 0px 11px;
+	margin: 20px 0px 0px 11px;
 	background:#CCC;
 
 }
 
 .nav,.nav-bold {
+	font-family:"Garamond", Times New Roman, Times, serif;
 	float:right;
 	width:70px;
 	height:15px;
-	margin:79px 15px 0px 0px;
+	margin:36px 15px 0px 0px;
 	font-size:15px;
 	cursor:pointer;
 	text-align:center;
@@ -166,11 +174,15 @@ p.body-text {
 	clear:both;
 }
 
-.img-back-credits {
-	width:40%;
+.img-back-credits,.img-back-contact,.img-back-about {
+	width:50%;
 	height:auto;
 	float:left;
 	clear:both;
+}
+
+.img-back-about {
+	width:33.3333%;
 }
 
 #home-img-shown {
@@ -210,16 +222,18 @@ p.body-text {
 #about-us-text {
 	float:right;
 	width:500px;
-	margin:70px 30px 0px 0px;
+	margin:2.5% 10% 0px 0px;
+	text-align:justify;
+	line-height:2em;
+	font-size:12px;
 }
 
 #video-text {
 	position:relative;
-	bottom:20px;
+	bottom:350px;
 	float:right;
 	width:320px;
-	margin:45% 0px 0px 0px;
-	margin-right: 10%;
+	margin:45% 20% 0px 0px;
 	font-size:16px;
 	background:none;
 }
@@ -227,28 +241,26 @@ p.body-text {
 #products-text {
 	position:relative;
 	float:right;
-	width:500px;
-	margin:43% -210px 0px 0px;
-	right:40%;
+	width:25%;
+	margin:43% 32% 0px 0px;
 	background:none;
-	font-size: 1em;
+	font-size: 14px;
 }
 
 #contact-text {
-	position:relative;
-	float:left;
-	width:350px;
-	margin:200px 0px 0px 0px;
-	left:50%;
+	float:right;
+	width:28%;
+	margin:20% 8% 0px 0px;
 	background:none;
-	font-size: 18px;
+	font-size: 14px;
 }
 
 #credits-text {
 	float:right;
 	width:auto;
 	height:100%;
-	margin:10px 283px 0px 0px;
+	margin:7% 20% 0px 0px;
+	font-size:14px;
 
 }
 
@@ -330,11 +342,17 @@ p.body-text {
 	float:right;
 	position:relative;
 	z-index:1;
-	width:7.5%;
+	width:5%;
+	opacity:.8;
+	filter:alpha(opacity=80);
 	height:auto;
-	margin:46% 0px 0px 0px;
-	margin-right:2%;
+	margin:22% 32% 0px 0px;
 	cursor:pointer;
+}
+
+.video-play-button:hover {
+	opacity:1;
+	filter:alpha(opacity=100);
 }
 
 /*override general declarations */
