--- a/css/base.css
+++ b/css/base.css
@@ -128,7 +128,7 @@ p.body-text {
 	float:right;
 	width:70px;
 	height:15px;
-	margin:36px 15px 0px 0px;
+	margin:36px 30px 0px 0px;
 	font-size:15px;
 	cursor:pointer;
 	text-align:center;
@@ -269,8 +269,10 @@ p.body-text {
 #last-arrow,#next-arrow {
 	float:left;
 	width:100%;
+	position:relative;
 	height:100%;
 	cursor:pointer;
+	z-index:100;
 }
 
 .arrow-container {
@@ -318,14 +320,51 @@ p.body-text {
 
 .img-back-portfolio,.img-back-press {
 	float:left;
-	width:33%;
+	width:100%;
 	height:auto;
 	opacity:0;
 	filter: alpha(opacity=0);
 }
 
-.img-back-press {
+.img-back-portfolio-container,.img-back-press-container {
+	float:left;
+	width:33%;
+	height:auto;
+}
+
+.img-back-press-container {
 	width:12.5%
+}
+
+/* sliding animation boxes for press and portfolio */
+
+.animate-slide-outer {
+	position:absolute;
+	z-index:-1;
+
+}
+
+.animate-slide-inner {
+	height: 100%;
+	width:1200px;
+	display:block;
+	margin:0 auto;
+	text-align:center;
+	float:left;
+
+}
+
+.img-view-container {
+	float:left;
+	display:block;
+	margin:0 auto;
+	text-align:center;
+	
+}
+
+.img-view {
+	height: 100%;
+	width:auto;
 }
 
 /* video */
@@ -354,6 +393,37 @@ p.body-text {
 	opacity:1;
 	filter:alpha(opacity=100);
 }
+
+
+/* dropdowns */
+
+.nav-dropdown {
+	float:left;
+	clear:both;
+	margin-top:0px;
+	padding:8px 0px 0px 20%;
+	text-align:left;
+	font-size:12px;
+	width:100%;
+}
+
+.dropdown-outer {
+	position:absolute;
+	overflow:hidden;
+	width:90px;
+	height:auto;
+	padding: 3px 3px 5px 5px;
+	background:#fff;
+	z-index:2;
+}
+
+.dropdown-inner {
+	width:100%;
+	height:auto;
+	z-index:3;
+}
+
+
 
 /*override general declarations */
 
